alarm.css, html 수정 / alarm,notice dto 생성 alarmMapper 생성, alarmController 수정

--- a/src/main/resources/static/css/alarm/alarmpage.css
+++ b/src/main/resources/static/css/alarm/alarmpage.css
@@ -7,14 +7,14 @@
 }
 
 
-body{
-  width: 1440px;
-}
+/*body{*/
+/*  width: 1440px;*/
+/*}*/
 
 
 header{
-    height: 44px;
-    position: relative;
+    height: 60px;
+    /*position: relative;*/
 }
 .alarm_title{
     font-size: 18px;
@@ -24,39 +24,35 @@ header{
     line-height: 44px;
     font-weight: bolder;
 }
-.tab_menu{
-    position:relative;
-    border-bottom: 1px solid #8b8b8b;
-}
+
 .list{
-    overflow:hidden;
+    position: relative;
+    /*overflow:hidden;*/
     display: flex;
     justify-content: center;
     margin-bottom: 20px;
 }
 
-.tab_menu .list li.btn_box .btn{
-    font-weight:bold;
-    color: #2BC1BF;
-}
+/*.tab_menu .list li.btn_box .btn{*/
+/*    font-weight:bold;*/
+/*    color: #2BC1BF;*/
+/*}*/
 
 .alarm_btn{
+
     font-weight: 700;
     color: black;
-    position: relative;
     padding: 10px 12px;
     text-align: center;
     font-size: 16px;
 }
 
-.alarm_content{
-    border-bottom: 1px solid #8b8b8b;
-    height: 100px;
-}
+/*.alarm_content{*/
+/*    border-bottom: 1px solid #8b8b8b;*/
+/*    height: 100px;*/
+/*}*/
 
-.alarm_book{
-    padding: 22px 16px;
-}
+
 
 .alarm_btn:hover{
     color: #2BC1BF;
@@ -67,19 +63,19 @@ header{
 
 
 
-.cont{
-    margin: 0 auto;
-    width: 1440px;
+/*.cont{*/
+/*    margin: 0 auto;*/
+/*    width: 1440px;*/
 
-}
+/*}*/
 .alarm_inner{
     margin-top: 50px;
 }
 
 .tab_menu .list .cont{
     display:none;
-    position:absolute;
-    text-align:center;
+    /*position:absolute;*/
+    /*text-align:center;*/
 }
 
 .tab_menu .btn_box .cont{
@@ -87,5 +83,15 @@ header{
 }
 
 .alarm_box{
-    display: inline-block;
+    position: absolute;
+    left: 30px;
+    border-bottom: 1px solid #6f6f6f;
+    width: 100%;
+    padding-bottom: 30px;
+    padding-top: 20px;
+    color: black;
+}
+
+.list{
+    border-bottom: 1px solid #6f6f6f;
 }
