--- a/src/main/resources/templates/alarm/alarmpage.html
+++ b/src/main/resources/templates/alarm/alarmpage.html
@@ -15,17 +15,17 @@
         <li class="btn_box">
             <a href="" class="alarm_btn">알림</a>
             <div  class="cont">
-              <div class="alarm_inner">
-                <div class="alarm_content">
-                    <a th:href="@{/book/info}" class="alarm_book"> <!--북 페이지 이동-->
-                        <div class="alarm_box">
-                            <span>불편한 편의점 김호연 신작 !</span>
-                            <div>(광고) 히포북에서 만나보세요 </div>
-                            <div>(수신거부: 설정 > 알림 설정)</div>
-                        </div>
-                    </a>
+                <div class="alarm_inner">
+                    <div class="alarm_content">
+                        <a th:href="@{/book/info}" class="alarm_book"> <!--북 페이지 이동-->
+                            <div class="alarm_box">
+                                <div>불편한 편의점 김호연 신작 !</div>
+                                <div>(광고) 히포북에서 만나보세요 </div>
+                                <div>(수신거부: 설정 > 알림 설정)</div>
+                            </div>
+                        </a>
+                    </div>
                 </div>
-              </div>
             </div>
         </li>
         <li>
@@ -35,7 +35,7 @@
                     <div class="alarm_content">
                         <div  class="alarm_box">
                             <a th:href="@{/book/info}" class="alarm_book"> <!--북 페이지 이동-->
-                                <span>공지사항이 없습니다</span>
+                                <div>공지사항이 없습니다</div>
                             </a>
                         </div>
                     </div>
