--- a/src/main/resources/static/css/mypage/myPageInt_sticker.css
+++ b/src/main/resources/static/css/mypage/myPageInt_sticker.css
@@ -1,7 +1,4 @@
-@font-face {
-  font-family: "neon";
-  src: url("../font/SpoqaHanSansNeo_all/SpoqaHanSansNeo_TTF_original/SpoqaHanSansNeo-Bold.ttf");
-}
+
 
 * {
   margin: 0;
@@ -151,6 +148,13 @@ a {
   margin-left: 7px;
 }
 
+#profile-photo > img {
+  width: 100%;
+  height: 100%;
+  border-width: 1px;
+  border-radius: 50px;
+}
+
 input[type="file"] {
   position: absolute;
   width: 64px;
@@ -169,6 +173,12 @@ input[type="file"] {
 
 #follow span {
   padding: 3px 3px;
+}
+
+#best-book-img{
+  width: 129px;
+  height: 120px;
+  border: solid #96eae8;
 }
 
 .mypage-cate {
