MapperTest 수정, js수정,  html 수정

--- a/src/main/resources/templates/categorie/Categoriepage.html
+++ b/src/main/resources/templates/categorie/Categoriepage.html
@@ -29,7 +29,7 @@
           <!-- 로그인 박스 -->
           <ul class="header_right_login">
             <button type="button" class="header_right_login_btn">
-              <a href="" class="header_right_login_box">로그인</a>
+              <a href="" class="header_right_login_box">로그아웃</a>
             </button>
           </ul>
         </div>
