게시판 메인 리스트 select 쿼리 완성

--- a/src/main/resources/templates/board/post_main.html
+++ b/src/main/resources/templates/board/post_main.html
@@ -14,7 +14,7 @@
         <main class="main__post-content-inner-box">
           <div class="main__post-title-search-box">
             <h1 class="main__title-box">
-              중고게시판
+              <span>중고게시판</span>
               <div class="main__search-option-box">
                 <span class="option-span" data-search_type="post">
                   <!-- <a href="">중고</a> -->
