"회원탈퇴완료" "닉네임변경 html 수정해야함"

--- a/src/main/resources/templates/mypage/myPageInt_manage.html
+++ b/src/main/resources/templates/mypage/myPageInt_manage.html
@@ -10,7 +10,7 @@
     <script defer th:src="@{js/mypage/myPageInt_manage.js}"></script>
   </head>
   <body>
-    <form action="">
+
       <div>
         <div>
           <header>
@@ -122,7 +122,8 @@
             <table class="main__func-content-table">
               <tr>
                 <th>내 정보 관리</th>
-                <td><a href="">개인정보 수정</a></td>
+                <td><a href="">프로필 사진 변경</a></td>
+                <td><a href="">닉네임 수정</a></td>
                 <td><a href="">회원 탈퇴</a></td>
               </tr>
               <tr>
