alarm - Mapper 수정, service 수정, controller 수정 중, html css 수정, dto 수정,  js 수정 중

--- a/src/main/resources/static/css/alarm/alarmpage.css
+++ b/src/main/resources/static/css/alarm/alarmpage.css
@@ -78,14 +78,26 @@ header{
     /*text-align:center;*/
 }
 
+
+
 .tab_menu .btn_box .cont{
     display:block;
 }
 
 .alarm_box{
+    border-bottom: 1px solid #6f6f6f;
+    margin-top: 10px;
+    /*margin-bottom: 10px;*/
+    padding-bottom: 20px;
+}
+
+.alarm_box_title{
+    font-size: 30px;
+}
+
+.alarm_book{
     position: absolute;
     left: 30px;
-    border-bottom: 1px solid #6f6f6f;
     width: 100%;
     padding-bottom: 30px;
     padding-top: 20px;
