--- a/src/main/resources/templates/alarm/alarmpage.html
+++ b/src/main/resources/templates/alarm/alarmpage.html
@@ -18,14 +18,14 @@
                 <div class="alarm_inner">
                     <div class="alarm_content">
                         <a th:href="@{/book/info}" class="alarm_book"> <!--북 페이지 이동-->
-                            <div class="alarm_box">
-                                <div>불편한 편의점 김호연 신작 !</div>
-                                <div>(광고) 히포북에서 만나보세요 </div>
-                                <div>(수신거부: 설정 > 알림 설정)</div>
+                            <div class="alarm_box" >
+                                <div class="alarm_box_title">ss</div>
+                                <div class="alarm_content">sldasldsadldsla</div>
                             </div>
                         </a>
                     </div>
                 </div>
+
             </div>
         </li>
         <li>
