--- a/src/main/resources/static/css/mypage/myPageInt_modify.css
+++ b/src/main/resources/static/css/mypage/myPageInt_modify.css
@@ -502,7 +502,7 @@ footer div {
   outline: none;
 }
 
-.myInfo-midify-content {
+.myInfo-modify-content {
   height: 100%;
   display: flex;
   flex-direction: column;
