--- a/src/main/resources/templates/mypage/myPageBookContainer.html
+++ b/src/main/resources/templates/mypage/myPageBookContainer.html
@@ -47,7 +47,7 @@
             <div id="profile-photo">
 
                 <img th:if="${profilePhoto.userProfileId == null}"
-                     th:src="@{/imgs/mypage/free-icon-hippo-3250992.png}">
+                     th:src="@{/imgs/mypage/free-icon-hippo-3250992.png}" alt=""/>
                 <img th:unless="${profilePhoto.userProfileId == null}"
                      th:src="@{'/upload/' + ${profilePhoto.userProfileUploadPath} + '/' + ${profilePhoto.userProfileUuid} + '_' + ${profilePhoto.userProfileName}}"
                      alt=""/>
