--- a/src/main/resources/templates/mypage/myPageInt_secession.html
+++ b/src/main/resources/templates/mypage/myPageInt_secession.html
@@ -100,11 +100,11 @@
         </div>
         <div>
           <div class="mypage-cate">
-            <div><a href="">소개</a></div>
-            <div><a href="">전체도서</a></div>
-            <div><a href="">내 게시물</a></div>
-            <div><a href="">스티커 신청</a></div>
-            <div><a href="">관리</a></div>
+            <div><a th:href="@{/mypage/int}">소개</a></div>
+            <div><a th:href="@{/mypage/book/container}">책장</a></div>
+            <div><a th:href="@{/mypage/book/write-content}">내 게시물</a></div>
+            <div><a th:href="@{/mypage/sticker}">스티커 신청</a></div>
+            <div><a th:href="@{/mypage/manage}">관리</a></div>
           </div>
         </div>
       </div>
