--- a/src/main/resources/templates/mypage/myPageInt_manage.html
+++ b/src/main/resources/templates/mypage/myPageInt_manage.html
@@ -71,28 +71,22 @@
               </div>
             </div>
           </main>
-          <section class="profile">
+          <section class="profile" th:object="${profileDto}">
             <div class="profile-all">
               <div id="profile-photo">
-                <input
-                  type="file"
-                  id="profile-image"
-                  name="profile-photo-file"
-                  accept="image/*"
-                />
-                <img
-                  id="hippo"
-                  th:src="@{/images/mypage/free-icon-hippo-3250992.png}"
-                  alt=""
-                />
+                <img th:if="${profilePhoto.userProfileId == null}"
+                     th:src="@{/imgs/mypage/free-icon-hippo-3250992.png}">
+                <img th:unless="${profilePhoto.userProfileId == null}"
+                     th:src="@{'/upload/' + ${profilePhoto.userProfileUploadPath} + '/' + ${profilePhoto.userProfileUuid} + '_' + ${profilePhoto.userProfileName}}"
+                     alt=""/>
               </div>
               <div id="profile-name">
-                <h3>책먹는 하마</h3>
+                <h3 th:text="${profileDto.userNickName}"></h3>
                 <span>님의 서재</span>
               </div>
               <div id="follow">
-                <span>팔로워 <span>0</span></span>
-                <span>팔로잉 <span>0</span></span>
+                <span>팔로워 <span th:text="${profileDto.followerCnt}"></span></span>
+                <span>팔로잉 <span th:text="${profileDto.followingCnt}"></span></span>
               </div>
             </div>
             <div id="my-favorite-book">
@@ -113,18 +107,25 @@
       <div class="main__manage-content-container">
         <div class="main__manage-center-content-box">
           <div class="main__my-etc-info">
-            <img th:src="@{/imgs/board/menu_user.png}" alt="">
-            <h2>test nickname</h2>
-            <p>test1234@naver.com</p>
-            <button type="button">로그아웃</button>
+            <div class="manage-profile-photo">
+              <img th:if="${profilePhoto.userProfileId == null}"
+                   th:src="@{/imgs/mypage/free-icon-hippo-3250992.png}" alt=""/>
+              <img th:unless="${profilePhoto.userProfileId == null}"
+                   th:src="@{'/upload/' + ${profilePhoto.userProfileUploadPath} + '/' + ${profilePhoto.userProfileUuid} + '_' + ${profilePhoto.userProfileName}}"
+                   alt=""/>
+            </div>
+
+            <h2 th:text="${profileDto.userNickName}"></h2>
+            <p th:text="${profileDto.userEmail}"> </p>
+
           </div>
           <div class="main__func-contnet-box">
             <table class="main__func-content-table">
               <tr>
                 <th>내 정보 관리</th>
                 <td><a href="">프로필 사진 변경</a></td>
-                <td><a href="">닉네임 수정</a></td>
-                <td><a href="">회원 탈퇴</a></td>
+                <td><a th:href="@{/mypage/modify}">닉네임 수정</a></td>
+                <td><a th:href="@{/mypage/secession}">회원 탈퇴</a></td>
               </tr>
               <tr>
                 <th>정보 수신 동의</th>
