--- a/src/main/resources/templates/categorie/collection.html
+++ b/src/main/resources/templates/categorie/collection.html
@@ -87,10 +87,11 @@
                                 </div>
                             </div>                           
                         </div>
-                    </div>  
+                    </div>
+                  </section>
                 </div>
-            </div>
-        </section>
-    </div>
+<!--            </div>-->
+<!--        </section>-->
+<!--    </div>-->
 </body>
 </html>
