--- a/src/main/resources/static/css/mypage/myPageInt_modify.css
+++ b/src/main/resources/static/css/mypage/myPageInt_modify.css
@@ -144,6 +144,19 @@ a {
   background-color: whitesmoke;
 }
 
+.profile-photo > img{
+  width: 100%;
+  height: 100%;
+  border-width: 1px;
+  border-radius: 50px;
+}
+
+#best-book-img{
+  width: 129px;
+  height: 120px;
+  border: solid #96eae8;
+}
+
 #hippo {
   width: 48px;
   height: 48px;
