--- a/src/main/resources/templates/mypage/myPageBookContainer.html
+++ b/src/main/resources/templates/mypage/myPageBookContainer.html
@@ -49,7 +49,7 @@
                 <img th:if="${profilePhoto.userProfileId == null}"
                      th:src="@{/imgs/mypage/free-icon-hippo-3250992.png}" alt=""/>
                 <img th:unless="${profilePhoto.userProfileId == null}"
-                     th:src="@{'/upload/' + ${profilePhoto.userProfileUploadPath} + '/' + ${profilePhoto.userProfileUuid} + '_' + ${profilePhoto.userProfileName}}"
+                     th:src="@{'/profile/' + ${profilePhoto.userProfileUploadPath} + '/' + ${profilePhoto.userProfileUuid} + '_' + ${profilePhoto.userProfileName}}"
                      alt=""/>
             </div>
 
