챗봇 기본 대화 가능하게 완성

--- a/src/main/resources/static/css/chatbot/chatbot.css
+++ b/src/main/resources/static/css/chatbot/chatbot.css
@@ -23,6 +23,7 @@
     top: -555px;
     background-color: white;
     border-radius: 5px;
+    display: none;
 }
 
 .chatbot-question-box{
@@ -80,6 +81,7 @@
 .user-chat-box,
 .chatbot-chat-box{
     margin-bottom: 20px;
+    display: flex;
 }
 
 .chat-div{
@@ -93,10 +95,13 @@
 }
 
 .chatbot-chat-box{
-    display: flex;
     justify-content: flex-end;
 }
 
 .chatbot-back-color{
     background-color: lightgrey;
+}
+
+.display-chatbot{
+    display : block;
 }
