--- a/src/main/resources/templates/chatbot/chatbot.html
+++ b/src/main/resources/templates/chatbot/chatbot.html
@@ -11,11 +11,10 @@
         <div class="chatbot-container">
             <div class="chatbot-head-box">
                 <h1>상담 챗봇</h1>
-                <img th:src="@{/imgs/administrator/fragment/close_btn.png}" alt="">
+                <img class="close-Icon" th:src="@{/imgs/administrator/fragment/close_btn.png}" alt="">
             </div>
             <div class="chatbot-viewer-box">
-                <div class="user-chat-box"><div class="chat-div">dddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd</div></div>
-                <div class="chatbot-chat-box"><div class="chat-div chatbot-back-color">ㅎㅇ!</div></div>
+
             </div>
             <div class="chatbot-question-box">
                 <input id="chat-input" type="text" placeholder="메세지를 입력하세요.">
