--- a/src/main/resources/static/css/main/mainpage.css
+++ b/src/main/resources/static/css/main/mainpage.css
@@ -124,6 +124,11 @@ main {
   line-height: 22px;
 }
 
+.header_alarm_btn{
+  border: none;
+  background-color: white;
+}
+
 a {
   color: black;
   text-decoration: none;
