--- a/src/main/resources/templates/alarm/alarmpage.html
+++ b/src/main/resources/templates/alarm/alarmpage.html
@@ -17,12 +17,14 @@
             <div  class="cont">
                 <div class="alarm_inner">
                     <div class="alarm_content">
-                        <a th:href="@{/book/info}" class="alarm_book" th:if= "${hasAlarms}"> <!--북 페이지 이동-->
-                            <div class="alarm_box" th:each="findAlarms:${findAlarms}" th:text="${findAlarms.alarmContent}">
-                                <div class="alarm_box_title">ss</div>
-
+                        <a th:href="@{/mypage/int}" class="alarm_book" th:if= "${hasAlarms}"> <!--쪽지 페이지 이동-->
+                            <div class="alarm_box" th:each="findAlarms:${findAlarms}">
+                                <div class="alarm_box_content" th:text="${findAlarms.userNickName} + 님에게  + ${findAlarms.alarmContent}"></div>
                             </div>
                         </a>
+                        <div class="alarm_book" th:unless="${hasAlarms}">  <!--알람 없을 때 -->
+                            <div class="alarm_none">새로운 알람이 없습니다.</div>
+                        </div>
                     </div>
                 </div>
 
